--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -39,9 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgType.cs" />
     <Compile Include="Commands\AddModuleCommand.cs" />
     <Compile Include="Commands\AddSiteCommand.cs" />
-    <Compile Include="ArgType.cs" />
     <Compile Include="CommandArgument.cs" />
     <Compile Include="Commands\BuildConfCommand.cs" />
     <Compile Include="Commands\ImportCfgCommand.cs" />
@@ -57,6 +57,7 @@
     <Compile Include="Commands\SetOnCommand.cs" />
     <Compile Include="ScriptCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ErrorConst.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
