--- a/Compiler.Tests/Tests.csproj
+++ b/Compiler.Tests/Tests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="CompilerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CommandTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
